--- a/src/pages/manage/index.html
+++ b/src/pages/manage/index.html
@@ -11,7 +11,7 @@
 <noscript>
     <strong>We're sorry but v-muitiple doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
-<div id="app"></div>
+<div id="manage">后台</div>
 <!-- built files will be auto injected -->
 </body>
 </html>
