--- a/public/manage.html
+++ b/public/manage.html
@@ -11,7 +11,7 @@
 <noscript>
     <strong>We're sorry but v-muitiple doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
-<div id="manage">后台</div>
+<div id="manage"></div>
 <!-- built files will be auto injected -->
 </body>
 </html>
